...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pre_login_UI.StudentEnterID">

    <EditText
        android:id="@+id/studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="USC ID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/studentMajor"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:backgroundTint="#980909"
        android:textColor="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
...
